--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "ganache-cli": "^6.12.1",
     "openzeppelin-solidity": "^3.2.0",
     "truffle-hdwallet-provider": "^1.0.17"
   },
